force-app/main/default/objects/CEL_Customer_Duplication__c/CEL_Customer_Duplication__c.object-meta.xml
<CustomObject>
    <label>Customer Duplication</label>
    <nameField>
        <displayFormat>CD - {00000000}</displayFormat>
        <label>Customer Duplication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers Duplication</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>