force-app/main/default/objects/CEL_Customer_Duplication__c/fields/cel_account__c.field-meta.xml
<CustomField>
    <fullName>cel_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers Duplication</relationshipLabel>
    <relationshipName>Customers_Duplication</relationshipName>
    <type>Lookup</type>
</CustomField>