force-app/main/default/objects/CEL_Customer_Duplication__c/fields/cel_customercode__c.field-meta.xml
<CustomField>
    <fullName>cel_customercode__c</fullName>
    <label>Customer Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>