force-app/main/default/objects/CEL_Customer_Duplication__c/fields/cel_customerCode_IdGroup_Date__c.field-meta.xml
<CustomField>
    <fullName>cel_customerCode_IdGroup_Date__c</fullName>
    <externalId>true</externalId>
    <label>Customer Code IdGroup Date</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>