force-app/main/default/objects/CEL_Customer_Duplication__c/fields/cel_fileName__c.field-meta.xml
<CustomField>
    <fullName>cel_fileName__c</fullName>
    <label>File Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>