force-app/main/default/objects/CEL_Customer_Duplication__c/fields/cel_idGroup__c.field-meta.xml
<CustomField>
    <fullName>cel_idGroup__c</fullName>
    <label>Id Group</label>
    <length>8</length>
    <type>Text</type>
</CustomField>