force-app/main/default/objects/CEL_Customer_Duplication__c/fields/cel_insertionDate__c.field-meta.xml
<CustomField>
    <fullName>cel_insertionDate__c</fullName>
    <label>Insertion Date</label>
    <type>Date</type>
</CustomField>