force-app/main/default/objects/CEL_Customer_Duplication__c/fields/cel_is_treated_flag__c.field-meta.xml
<CustomField>
    <fullName>cel_is_treated_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Treated</label>
    <type>Checkbox</type>
</CustomField>