force-app/main/default/objects/CEL_Customer_Duplication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>cel_customercode__c</columns>
    <columns>cel_account__c</columns>
    <columns>cel_idGroup__c</columns>
    <columns>cel_insertionDate__c</columns>
    <columns>cel_customerCode_IdGroup_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>cell</value>
    </filters>
    <label>All</label>
</ListView>